--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.28.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.0",
@@ -27,6 +30,7 @@
     "next-themes": "^0.4.6",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
