--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0",
+    "groq-sdk": "^0.24.0",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.0",
     "next": "15.1.5",
