--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,7 @@
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.0",
-    "next": "15.1.5",
+    "next": "^15.4.0-canary.77",
     "next-themes": "^0.4.6",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
